<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buildingDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:background="@drawable/rounded_corners"
    android:backgroundTint="@color/cardview_dark_background"
    android:theme="@style/Theme.ARTourGuideApp">

    <TextView
        android:id="@+id/entity_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dialog_building_name"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/arNavigationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/wwu_blue"
                android:text="@string/dialog_ar"
                android:elevation="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/mapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/wwu_blue"
                android:text="@string/dialog_map"
                android:elevation="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <Button
                android:id="@+id/mediaButton"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/wwu_blue"
                android:text="@string/dialog_play_audio"
                android:elevation="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorOnPrimary" />

    <ScrollView
        android:id="@+id/entity_data_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/typesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/dialog_types_label"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/dialog_types"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/departmentsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/dialog_departments_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/departmentsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/accessibilityInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/dialog_accessibility_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/accessibilityLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="vertical" >

            </LinearLayout>

            <TextView
                android:id="@+id/genderNeutralRestroomsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/dialog_gender_neutral_restrooms_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genderNeutralRestrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/computerLabsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"

                android:text="@string/dialog_computer_labs_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/computerLabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/diningLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/dialog_dining_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/diningLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/url_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/dialog_additional_info_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/dialog_link_to_website_label"
                android:textColor="?android:attr/textColorLink"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
